public static class PlayerAnimationConstants
{
    public static string JumpMultiplier = "JumpMultiplier";
    public static string RollMultiplier = "RollMultiplier";
    public static string IsJumping = "IsJumping";
    public static string IsRolling = "IsRolling";
    public static string StartRun = "StartRun";
    public static string OnDeath = "OnDeath";
}
